<resources>
    <string name="app_name">FelizMente</string>
    <string name="user_name_label">Email:</string>
    <string name="e_mail_label">E-mail:</string>
    <string name="password_label">Contraseña</string>
    <string name="registration_intro_line">Introduce tus datos</string>
    <string name="sign_in">Regístrate</string>
    <string name="cancel">Cancelar</string>
    <string name="password_hint">contraseña</string>
    <string name="email_hint">micorreo@mail.com</string>
    <string name="user_name_hint">nombre sin espacios</string>
    <string name="login">Login</string>
    <string name="go_back">Volver atrás</string>
    <string name="login_intro_line">Introduce tus datos de usuario para iniciar sesión</string>
    <string name="user_label">Usuario</string>
    <string name="greeting">Bienvenidos a FelizMente</string>
    <string name="greeting2">Pulsa en la opción que deseas elegir</string>
    <string name="music">Música</string>
    <string name="music_title">Música</string>
    <string name="ponte_a_prueba">Ponte a prueba</string>
    <string name="videoteca">Videoteca</string>
    <string name="ponte_a_prueba_con_un_juego">Ponte a prueba con un juego</string>
    <string name="ver_videos">Ver vídeos</string>
    <string name="escuchar_musica">Escuchar música</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">AIzaSyCShf8QPsI4-7pJ8ggqY3txjKoSq3mSczY</string>
    <string name="music_mood">¿Qué te apetece escuchar esta vez?</string>
    <string name="Música">Música</string>
    <string name="canciones_nostalgicas">Algo nostálgico</string>
    <string name="dancing_music">¡Quiero bailar!</string>
    <string name="choose_channel">Pulsa en el canal que deseas ver a continuación</string>
    <string name="spanish_culture">Cultura de España</string>
    <string name="relajacion">Relajación</string>
    <string name="humor">Humor</string>
    <string name="videos_nostalgia">Recuerdos</string>
    <string name="felizmente_titulo">FelizMente</string>
    <string name="logo_de_felizmente">Logo de felizmente</string>
    <string name="score_message">Tu puntuación es:</string>
    <string name="try_again">Jugar otra vez</string>
    <string name="numero_de_preguntas">Número de preguntas</string>
    <string name="pregunta">Pregunta</string>
    <string name="button">Button</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="foto">Foto</string>
    <string name="nostalgic_music">Escuhar música nostálgica</string>
    <string name="acceder_a_videoteca">Acceder a videoteca</string>
    <string name="nuevo_juego">Nuevo juego</string>
    <string name="dejar_de_jugar">Dejar de jugar</string>
    <string name="exit">Salir</string>
    <string name="personajes_conocidos">Personajes</string>
    <string name="juego_con_preguntas_sobre_gente_famosa">Juego con preguntas sobre gente famosa</string>
    <string name="juego_con_preguntas_sobre_cultura_general">Juego con preguntas sobre cultura general española</string>
    <string name="cultura">Cultura</string>
    <string name="elige_una_categor_a_para_jugar">Elige una categoría para jugar</string>
    <string name="cambiar_de_juego">Cambiar de juego</string>
    <string name="login_title">Inicia sesión</string>
    <string name="still_not_signed_up">¿Aún no tienes cuenta?</string>
    <string name="sign_up">Regístrate</string>
    <string name="ponte_a_prueba_card">Juego de preguntas</string>
    <string name="next_video">Siguiente vídeo</string>
    <string name="back">Volver</string>
    <string name="salir">Salir</string>
    <string name="incorrecto">Incorrecto</string>
    <string name="correcto">¡Correcto!</string>
    <string name="aciertos">Aciertos:</string>
</resources>