<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/layoutScore"
    android:padding="16dp"
    style="@style/layout">

    <TextView
        android:id="@+id/idScore"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/score_message"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/wild_watermelon"
        android:textSize="24sp" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/your_pink"
        android:text="@string/nuevo_juego"
        android:textAllCaps="false"
        android:textColor="@color/wild_watermelon"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/exitQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/wild_watermelon"
        android:text="@string/dejar_de_jugar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp" />


</LinearLayout>