<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint_julep"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:margin="6dp"
        android:text="@string/greeting"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/greeting"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:columnCount="3"
        android:rowCount="1">

        <!--Start: MUSIC CARD -->

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageMusic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/escuchar_musica"
                    android:onClick="goToMusic"
                    android:src="@drawable/box_music" />

                <TextView
                    android:id="@+id/music_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music"
                    android:textAlignment="center"
                    android:textSize="22dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--End: MUSIC CARD -->


        <!--Start: VIDEO CARD -->
        <!--End: VIDEO CARD -->

        <!--Start: PHOTOS CARD -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/linear_layout_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageVideo"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="20dp"
                    android:onClick="goToVideos"
                    android:src="@drawable/box_video" />

                <TextView
                    android:id="@+id/video_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videoteca"
                    android:textAlignment="center"
                    android:textSize="22dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagePhotos"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/ponte_a_prueba_con_un_juego"
                    android:onClick="goToPhotos"
                    android:src="@drawable/box_photos" />

                <TextView
                    android:id="@+id/photos_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ponte_a_prueba"
                    android:textAlignment="center"
                    android:textSize="22dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!--End:PHOTOS CARD -->

    </LinearLayout>

    <TextView
        android:id="@+id/greeting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linear_layout_main"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="178dp"
        android:margin="12dp"
        android:text="@string/greeting2"
        android:textAlignment="center"
        android:textSize="18dp"
        tools:ignore="NotSibling" />

</RelativeLayout>